[project]
name = "reprobe"
version = "0.1.0"
description = "A reproducibility auditor for ML repositories"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "gitpython>=3.1.0",
    "packaging>=23.0",
    "tomli>=2.0.0 ; python_version < '3.11'",
]

[project.scripts]
reprobe = "reprobe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"